change project name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rmayf/PhotoGallery",
+    "name": "rmayf/photo-gallery",
     "type": "project",
     "description": "Personal site for sharing and viewing family photographs",
     "authors": [
